add craft site project card
not done yet

--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
         </div>
       </div>
 
+      <!-- vue craft room exercise-->
+      <div class="pcontainer filtler-code">
+        <div class="card" id="project30">
+          <div class="is-active"></div>
+          <div class="item_content" id="project30text">
+            <p class="item_title">Fibre Arts Porfolio Site</p>
+            <p class="item_description>">Learning Vue.js through a portfolio site for crafts and fibre arts.</p>
+            <button class="modal-btn" href="#myModal28">Click to explore more.</button>
+          </div>
+        </div>
+      </div>
+
       <!-- electron experiments-->
       <div class="pcontainer filter-code">
         <div class="card" id="project29">
@@ -2864,6 +2876,11 @@
         </div>
 
       </div>
+    </div>
+
+    <!-- craft site vue-->
+    <div class="modal" id="myModal28">
+      
     </div>
 
     <!-- <div class="modal" id="myModal-e">
