add readme to electron experiments

--- a/index.html
+++ b/index.html
@@ -2965,6 +2965,10 @@
               to categorize them.
             </p>
             <p>
+              A place to organize my youtube subscriptions and practice my backend with electron too. I lean more towards front
+              end so I thought something to categorize my youtube subscriptions would be a convenient way for me to practice backend.
+            </p>
+            <p>
               Here is the github where the code and process in making this application has
               been documented:
               <a href="https://github.com/ViLinh27/myYoutubeFileCabinet">See the github repo here</a>
@@ -2973,6 +2977,51 @@
               Here is the link to the itch.io page to download the applciation:
               <a href="https://linh-is-tibia.itch.io/my-youtube-filing-cabinet">Download the app here</a>
             </p>
+          </div>
+
+          <div class="mbc_container">
+            <h5>The process</h5>
+            <p>
+              Make a base plate app to go more in depth on what each file is supposed to do. Comment as heavily as I can.
+            </p>
+            <p>Draw out how i would visualize needed screens.</p>
+            <p>Draw out each asset with appropriate dimensions.</p>
+            <p>Make the basic html components and style them accordingly in css.</p>
+            <p>Add functionality to buttons with render.js and pass into main.js and preload as needed. Debug for persistence issues.</p>
+            <p>Implement the search functionality.</p>
+            <p>So much debugging.</p>
+          </div>
+
+          <div class="mbc_container">
+            <h5>Categories</h5>
+            <p>These are categories I would use to categorize my own youtube channel subscriptions</p>
+            <ul>
+              <li>Making Games</li>
+              <li>Funnies</li>
+              <li>Tech Industry</li>
+              <li>Learning about people</li>
+              <li>Learning about institutions</li>
+              <li>Food</li>
+              <li>Art from a Cool Artist</li>
+              <li>Fashion</li>
+              <li>Animation Industry</li>
+              <li>Travel</li>
+            </ul>
+          </div>
+
+          <div class="modal_container">
+            <h5>Sources</h5>
+            <ul>
+              <li>https://github.com/saleel/nymdrive</li>
+              <li>https://github.com/EshelEyni/DuckMap</li>
+              <li>https://github.com/VitaliyRubachuk/Il-Gambero-Rosso.github.io</li>
+              <li>https://github.com/AntonKhorev/osm-note-viewer</li>
+            </ul>
+          </div>
+
+          <div class="modal_container">
+            <h5>Notes</h5>
+            
           </div>
 
           <div class="modal-footer">Experiments with Electron</div>
